Configured for Github Pages

--- a/src/containers/podcast/Podcast.scss
+++ b/src/containers/podcast/Podcast.scss
@@ -36,4 +36,18 @@
   .podcast-main-div {
     text-align: center;
   }
+
+  .podcast-thumbnail {
+    max-width: 600px;
+    width: 100%;
+    margin: 20px auto;
+    border-radius: 12px;
+    transition: transform 0.3s ease;
+    display: block;
+  
+    &:hover {
+      transform: scale(1.03);
+      cursor: pointer;
+    }
+  }
 }
